fixed styling of dark mode

--- a/src/components/achievementCard/AchievementCard.scss
+++ b/src/components/achievementCard/AchievementCard.scss
@@ -7,7 +7,6 @@
   }
 }
 .card-title {
-  color: $titleColor;
   font-size: 22px;
   line-height: 24px;
   font-weight: 700;
