--- a/src/containers/StartupProjects/StartupProjects.scss
+++ b/src/containers/StartupProjects/StartupProjects.scss
@@ -6,7 +6,7 @@
   width: 250px;
 }
 .card-title {
-  color: $titleColor;
+  // color: $titleColor;
   font-size: 22px;
   line-height: 24px;
   font-weight: 700;
@@ -14,13 +14,13 @@
 }
 .card-subtitle {
   color: $cardSubtitle;
-  font-size: 17px;
+  font-size: 19px;
   line-height: 1.5rem;
 }
+
 .project-card {
   display: flex;
   flex-direction: column;
-  background-color: $lightBackground2;
   padding: 1.5rem;
   border-radius: 10px;
   border: 1px solid $lightBorder1;
@@ -31,6 +31,7 @@
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  background-color: $lightBackground2;
 }
 
 .project-card-dark {
@@ -38,6 +39,7 @@
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.25s ease;
+  background-color: $darkBackground;
 }
 
 .project-detail {
@@ -69,8 +71,8 @@
   align-items: center;
   border-radius: 4px;
   display: inline-flex;
-  font-size: 0.75rem;
-  height: 2em;
+  font-size: 1rem;
+  height: 2.5em;
   justify-content: center;
   white-space: nowrap;
   line-height: 1.5;
